--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: >- # used by seo meta and the atom feed
   Fred Hoffmann's devsite
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: fredferd1995@github.io
+url: https://fredferd1995@github.io
 
 github:
   username: fredferd1995 # change to your github username
